olapic-local-app.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    creationTimestamp: null
    generation: 1
    labels:
      app: olapic-app-nodejs
      project: content-engine-admin-localbox
      service: nodejs
      vendor: Olapic
    name: nodejs-content-engine-admin
  spec:
    replicas: 1
    selector:
      context: nodejs-content-engine-admin-context
      name: nodejs-content-engine-admin
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 1
        maxUnavailable: 1
        timeoutSeconds: 120
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        creationTimestamp: null
        labels:
          context: nodejs-content-engine-admin-context
          name: nodejs-content-engine-admin
      spec:
        containers:
        - name: nodejs-content-engine-admin
          image: nodejs-content-engine-admin:latest
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8080
            protocol: TCP
          resources:
            limits:
              cpu: 300m
              memory: 100M
            requests:
              cpu: 50m
              memory: 25M
          securityContext:
            capabilities: {}
            privileged: false
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - name: nodejs-content-engine-admin-test
          image: nodejs-content-engine-admin:automation
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8081
            protocol: TCP
          resources:
            limits:
              cpu: 300m
              memory: 100M
            requests:
              cpu: 50m
              memory: 25M
          securityContext:
            capabilities: {}
            privileged: false
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - nodejs-content-engine-admin
        from:
          kind: ImageStreamTag
          name: nodejs-content-engine-admin:latest
          namespace: olapic
      type: ImageChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - nodejs-content-engine-admin-test
        from:
          kind: ImageStreamTag
          name: nodejs-content-engine-admin:automation
          namespace: olapic
      type: ImageChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - nginx-content-engine-admin
        from:
          kind: ImageStreamTag
          name: nginx-localbox:4
          namespace: olapic
      type: ImageChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - nginx-content-engine-admin-test
        from:
          kind: ImageStreamTag
          name: nginx-localbox:4
          namespace: olapic
      type: ImageChange
    - type: ConfigChange
- apiVersion: v1
  kind: "ImageStream"
  apiVersion: "v1"
  metadata:
    name: "nodejs-content-engine-admin"
  spec:
    dockerImageRepository: 740906069008.dkr.ecr.us-east-1.amazonaws.com/service/content-engine-admin
    tags:
      -
        name: 'automation'
        from:
          kind: DockerImage
          name: '740906069008.dkr.ecr.us-east-1.amazonaws.com/service/content-engine-admin:automation'
        importPolicy:
          scheduled: true
      -
        name: 'latest'
        from:
          kind: DockerImage
          name: '740906069008.dkr.ecr.us-east-1.amazonaws.com/service/content-engine-admin:latest'
        importPolicy:
          scheduled: true
- apiVersion: v1
  kind: Route
  metadata:
    creationTimestamp: null
    labels:
      app: olapic-app-nodejs
      project: content-engine-admin-localbox
      service: nodejs
      vendor: Olapic
    name: nodejs-content-engine-admin-route
  spec:
    host: admin.local.photorank.me
    port:
      targetPort: nodejs-content-engine-admin-endpoint
    tls:
      certificate: |-
        [...]
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        [...]
      termination: edge
    to:
      kind: Service
      name: nodejs-content-engine-admin
      weight: 100
    wildcardPolicy: None
- apiVersion: v1
  kind: Route
  metadata:
    creationTimestamp: null
    labels:
      app: olapic-app-nodejs
      project: content-engine-admin-localbox
      service: nodejs
      vendor: Olapic
    name: nodejs-content-engine-admin-test-route
  spec:
    host: admin-test.local.photorank.me
    port:
      targetPort: nodejs-content-engine-admin-test-endpoint
    tls:
      certificate: |-
        [...]
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        [...]
      termination: edge
    to:
      kind: Service
      name: nodejs-content-engine-admin
      weight: 100
    wildcardPolicy: None
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    labels:
      app: olapic-app-nodejs
      project: content-engine-admin-localbox
      service: nodejs
      vendor: Olapic
    name: nodejs-content-engine-admin
  spec:
    ports:
    - name: nodejs-content-engine-admin-endpoint
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: nodejs-content-engine-admin-test-endpoint
      port: 8081
      protocol: TCP
      targetPort: 8081
    selector:
      context: nodejs-content-engine-admin-context
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata: {}
